contentcuration/contentcuration/static/less/queue.less
@import "global-variables.less";

#queue-area {
  padding-left: 0;
  display: block;
  margin-right: 15px;
}

#queue {
	@queue-width:600px;
	@queue-color: black;
	@queue-background-color:@gray-300;
	@queue-min-height: 575px;
	@queue-list-item-height: 40px;
	@queue-top-bar-padding: 16px;
	@highlight-color: #E6E6E6;
	@placeholder-color:#666666;

	padding-left: 5vw;

  // TODO(davidhu): Make the docked clipboard resizeable, or do some
  // refactoring so we don't have to hardcode pixel widths in a bunch of
  // places (e.g. flexbox)
	&.pinned {
		padding-left: 0;

		#main-queue {
			position: fixed;
			height: 100%;
			margin-top: 10px;
			box-shadow: -1px 0 1px 0px rgba(0, 0, 0, 0.1);
			border-left: 1px solid @gray-400;
			width: @queue-width-pinned;
		}
	}

	&.closed {
		#main-queue, #queue-back{ display: none; }
	}
	&.opened {
		#main-queue, #queue-back{ display: block; }
	}
	&.opened.pinned {
	  #queue-back { display: none; }
	}

	.queue-button{
		cursor:pointer;
		font-size: 12pt;
		font-weight: bold;
		color: @queue-color;
		background-color: transparent;
		border-radius: 0px;
		pointer-events: all;
		&:hover { color: @queue-color; }
		.badge{
			background-color: @blue-500;
			color:white;
			padding: 2px 10px !important;
		}
	}
	.button_drop{
	    z-index: 999;
	    pointer-events: none;
      	position: relative;
      	padding: 0px 0px 35px 15px;
    	margin: 0px 0px -35px -15px;

	    .drop_text{
	    	visibility: hidden;
	    	font-size: 10pt;
			color: @blue-500;
			display: inline-block;
			text-align: right;
			width: 400px;
	    }
	    &.ui-droppable-active {
	    	.drop_text{ visibility: visible; }
	    	.queue-button{ border: 3px solid @blue-500; }
	    }
	    &.droppable-area-hover .queue-button{
			background-color: blanchedalmond !important;
		}
	}

	#queue-back {
		position: fixed;
	    height: 90vh;
	    width: 100vw;
	    left: 0em;
	    z-index: 900;
	    cursor: default;
	}
	#main-queue{
		border-radius: 0px;
		width: @queue-width;
		box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 2px;
		min-height: @queue-min-height;
		background-color: @queue-background-color;
		right: 0;
		position: absolute;
    	z-index: 999;
    	margin-left: 65px;
		.queue-interior{
			background-color: white;
			min-height:@queue-min-height;

			.queue-overlay {
				display: none;
				position: absolute;
				z-index: 5;
				height: 100%;
				width: 100%;
				top: 0;
				left: 0;
				background-color: rgba(255, 255, 255, 0.8);
				border: 4px solid @blue-500;

				.queue-overlay-text {
					position: absolute;
					top: 50%;
					left: 50%;
					transform: translateX(-50%) translateY(-50%);
					font-size: 24px;
					font-weight: bold;
					color: @blue-500;

					.drag-out-text {
						display: none;
					}
				}

				// Don't show overlay text when dragging out of clipboard.
				&.queue-item-start-drag {
					.drag-in-text {
						display: none;
					}
					.drag-out-text {
						display: block;
					}
				}
			}
			&.ui-droppable-active .queue-overlay {
				display: block;
			}
			&.droppable-area-hover .queue-overlay {
				background-color: rgba(255, 235, 205, 0.8);
			}

			hr{ margin: 0; }
			.clipboard_options {
				padding: @queue-top-bar-padding;
			}
			.clipboard_options a{
				.action-text;
				padding: 2px;
			}
			.select_all{
				width:16px;
				height:16px;
				margin-left:12px;
				margin-right:10px;
				cursor:pointer;
			}
			.select_all+label{
				cursor:pointer;
				margin-bottom: -3px;
			}
			.select_all_fixed {
				padding: @queue-top-bar-padding;
			}
			.select_all_label {
				width: auto;
			}
			.pin_clipboard {
				padding: 16px;
				margin: 0;


				.pin_clipboard_icon {
					display: none;
				}
				.unpin_clipboard_icon {
					display: block;
					margin-top: -1px;
				}

				.pin_clipboard_icon,
				.unpin_clipboard_icon {
					fill: @gray-700;
				}

				&:hover .pin_clipboard_icon {
					display: block;
				}
				&:hover .unpin_clipboard_icon {
					display: none;
				}


				&:hover .pin_clipboard_icon,
				&:hover .unpin_clipboard_icon {
					fill: @blue-500;
				}
				&.pinned {
					.pin_clipboard_icon {
						display: block;
					}
					.unpin_clipboard_icon {
						display: none;
					}
					&:hover .pin_clipboard_icon {
						display: none;
					}
					&:hover .unpin_clipboard_icon {
						display: block;
					}
				}

				// Creates an invisible mouseover area to show a tootip.
				rect {
					width: 100%;
					height: 100%;
					opacity: 0;
				}
			}
			#queue_content{
				overflow:hidden;

				&.pinned {
					// TODO(davidhu): 110px is hardcoded. Refactor, e.g. define Studio
					//     toolbar heights as variables.
					height: calc(100vh - 110px);

					.list_content li {
						min-width: @queue-width-pinned - 32px;
						label {
							width: @queue-width-pinned - 100px;
							&.segment {
								width: @queue-width-pinned;
							}
						}
					}
					.list_content#clipboard_list {
						height: calc(100% - 56px);
					}
				}

				.list_content{
					width: 100%;
					height:100%;
					padding-top:20px;
					padding-bottom:95px;
					&#clipboard_list {
						height: @queue-min-height;
						overflow: auto;
						padding: 0;
					}
					.default-item{
						padding:10px;
						&.clipboard_empty { padding-top: 35%; }
					}
					li{
						padding-top:5px;
						min-width:@queue-width - 32px;
						background-color: white;
						&.queue-item:hover {
							background-color: @highlight-color;

						}
						&.queue-item {
							padding-left: 26px;
						}
						&.queue-item.segment {
							padding-left: 0;
							padding-top: 0;
						}
						&.queue-item.segment:hover {
							background-color: transparent;
						}
						&.draggable .hide_on_drag{ display: none; }

						input[type=checkbox]{
							display:inline-block;
							width:20px;
							height:20px;
							vertical-align:middle;
							cursor:pointer;
						}
						label{
							*{ vertical-align: middle; display:inline; }
							font-size:16px;
							cursor:pointer;
							width:@queue-width - 100px;
							&.segment {
								border-left: 10px solid @gray-500;
								background-color: @gray-200;
								height: 70px;
								line-height: 70px;
								width: @queue-width;
								margin-bottom: 0;
							}

							.segment-link-icon {
								font-size: 22px;
								margin-top: -5px;
								display: inline-block;
								&:hover {
									color: black;
								}
							}
							.content-item-icon{ padding-left:5px; }
							.content-item-thumbnail {
								width: 30px;
								margin-left: 6px;
								margin-right: 10px;
								margin-top: -3px;  // HACK
								display: inline-block;
							}
							.toggle-icon{
								padding: 5px;

								&.segment {
									font-size: 40px;
									float: right;
									color: black;
									padding-right: 0;
									line-height: 63px;
									height: 70px;
								}
							}
							&:hover {
								.content-options-dropdown{ visibility:visible; }
								.popover{ display: block !important; }
							}
							.popover{
								width: 150px;
								border-radius: 0;
								margin-top: 0;
								.arrow{
									left: auto !important;
									right: 10% !important;
								}
								.popover-content {
								    padding:0px;
								    width: 100%;
									.option{
										display: block;
										width:100%;
										padding:5px 20px;
										border:none;
										font-size:12pt;
										cursor: pointer;
										&:hover {
											font-weight:bold;
											background-color: @gray-200;
										}
									}
								}
							}
							.content-options-dropdown{
								visibility:hidden;
								margin: 15px 10px 0 0;
							}
							.queue_item_title{
								overflow:hidden;
								max-width:65%;
								display:inline-block;
								margin-left:5px;
								color: black;
								font-weight: normal;
								&.segment {
									font-weight: bold;
									display: inline;
									vertical-align: baseline;
								}
								i { color: @gray-700; }
							}
							.clipboard-topic-count{
								background-color: @blue-500;
								color: white;
								padding: 2px 10px;
								margin-left: 10px;
								margin-top: -2px;
								display: inline-block;
							}
						}
					}
				}
				.subdirectory{
					display:none;
					padding-left:20px;
					&.segment {
						margin-bottom: 35px;
						padding-left: 0;
						> ul > li.queue-item.content {
							padding-left: 26px;
						}
						> ul > li.queue-item.content:nth-child(2) {
							padding-top: 10px;
						}
					}
				}
			}
		}
	}
}

.context-menu {
	display:none;
	cursor:pointer;
	position: absolute;
	z-index: 10;
	background-color: white;
	border:1px solid @gray-200;
	border-width:thin;
	.context-option{
		padding:5px 10px;
		font-size:12pt;
	}
	.context-option:hover{
		font-weight:bold;
		background-color: @gray-200;
	}
	&.init, &:focus{ display:block; }
}

